spade-tests/src/snapshots/spade_tests__parser__multiple_resets_triggers_error_with_initial.snap
---
source: spade-tests/src/parser.rs
---
entity main() -> bool {
    reg(clk) a reset(true: 0) initial(true) reset(true: 0) = true;
    true
}

error: Multiple resets specified
  ┌─ testinput:2:51
  │
2 │     reg(clk) a reset(true: 0) initial(true) reset(true: 0) = true;
  │                      -------                      ^^^^^^^ Second reset
  │                      │                             
  │                      First reset


