spade-tests/src/snapshots/spade_tests__parser__no_reg_in_function.snap
---
source: spade-tests/src/parser.rs
---
fn a(clk: clock) -> int<8> {
    reg(clk) x = 10;
    x
}

error: register declared in function
  ┌─ testinput:2:5
  │
1 │ fn a(clk: clock) -> int<8> {
  │ -- this is a function
2 │     reg(clk) x = 10;
  │     ^^^ register not allowed here
  │
  = note: functions can only contain combinatorial logic
  = consider making the function an entity
  │
1 │ entity a(clk: clock) -> int<8> {
  │ ~~~~~~
