spade-tests/src/snapshots/spade_tests__parser__non_statements_in_statement_comptime_is_error.snap
---
source: spade-tests/src/parser.rs
---
fn a() {
    $if a == 0{
        let _ = 0;
        false
    }
    true
}


error: Unexpected `false`, expected `}` or `statement`
  ┌─ testinput:4:9
  │
4 │         false
  │         ^^^^^ expected `}` or `statement`


