spade-tests/src/snapshots/spade_tests__parser__order_compiles.snap
---
source: spade-tests/src/parser.rs
assertion_line: 174
---
entity a(b: int<8>, c: int<8>) -> (int<8>, int<8>) {
    std::ops::order(b, c)
}



